# BlackHole

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  main.txt
shaders/: blackhole.comp  disk_init.comp  disk_init.comp.bak  fullscreen.frag  fullscreen.frag.bak  fullscreen.vert  geodesic.comp  grid.frag  grid.vert
src/: BlackHole.cpp  BlackHole.h  Camera.cpp  Camera.h  FullscreenQuad.cpp  FullscreenQuad.h  Renderer.cpp  Renderer.h  Renderer.hpp  Shader.cpp  Shader.h  main.cpp
